2010-07-28  fsamuel@chromium.org  <fsamuel@chromium.org>

Reviewed by David Hyatt.

        REGRESSION (r63994): Bank of America's home page is horribly mis-rendered
        https://bugs.webkit.org/show_bug.cgi?id=42993

        Fixed bug introduced by patch for bug 40775.

        The new table rendering code did not take into account table layouts starting
        during a partial construction of the table render tree. As such,
        multiple layouts on the same table resulted in more columns being generated.
        This patch solves this issue.

        * rendering/AutoTableLayout.cpp:
        (WebCore::AutoTableLayout::recalcColumn):
        * rendering/RenderTable.cpp:
        (WebCore::RenderTable::cellAbove):
        (WebCore::RenderTable::cellBelow):
        (WebCore::RenderTable::cellBefore):
        * rendering/RenderTableSection.cpp:
        (WebCore::RenderTableSection::ensureRows):
        (WebCore::RenderTableSection::addCell):
        (WebCore::RenderTableSection::setCellWidths):
        (WebCore::RenderTableSection::calcRowHeight):
        (WebCore::RenderTableSection::layoutRows):
        (WebCore::RenderTableSection::paintObject):
        (WebCore::RenderTableSection::appendColumn):
        (WebCore::RenderTableSection::splitColumn):
        * rendering/RenderTableSection.h:
        (WebCore::RenderTableSection::CellStruct::CellStruct):
2010-07-28  fsamuel@chromium.org  <fsamuel@chromium.org>

        Reviewed by David Hyatt.

        REGRESSION (r63994): Bank of America's home page is horribly mis-rendered
        https://bugs.webkit.org/show_bug.cgi?id=42993

        Restored the expectation for the slashdot logo table test.

        Added a new layout test to check for the correctness of early table layout.

        * fast/table/early-table-layout.html: Added.
        * platform/chromium/test_expectations.txt:
        * platform/gtk/fast/table/early-table-layout-expected.checksum: Added.
        * platform/gtk/fast/table/early-table-layout-expected.png: Added.
        * platform/gtk/fast/table/early-table-layout-expected.txt: Added.


Canonical link: https://commits.webkit.org/55050@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64225 268f45cc-cd09-0410-ab3c-d52691b4dbfc