WebCore/rendering/RenderTableSection.h
@@ -56,16 +56,9 @@ public:
     struct CellStruct {
         Vector<RenderTableCell*, 1> cells; 
         bool inColSpan; // true for columns after the first in a colspan
-        bool empty;
 
         CellStruct():
-          inColSpan(false),
-          empty(false) {}
-
-        CellStruct(const CellStruct& other):
-            cells(other.cells),
-            inColSpan(other.inColSpan),
-            empty(other.empty) {}
+          inColSpan(false) {}
         
         RenderTableCell* primaryCell()
         {
